--- a/Lasso_R&I.ipynb
+++ b/Lasso_R&I.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lasso (coordinate descent) - Carlos and Jeremy - R&I "
+    "# Lasso (coordinate descent) - R&I "
    ]
   },
   {
